Closed Bug 626169 Opened 14 years ago Closed 13 years ago

"nsExceptionHandler.cpp(739) : error C2065: 'MiniDumpWithFullMemoryInfo' : undeclared identifier"

Categories

(Toolkit :: Crash Reporting, defect)

x86
Windows 2000
defect
Not set
blocker

Tracking

()

RESOLVED FIXED
mozilla2.0b12
Tracking Status
blocking2.0 --- -

People

(Reporter: sgautherie, Assigned: sgautherie)

References

()

Details

Attachments

(1 file)

I tried to compile Firefox on my Windows 2000 but that failed with:
{
nsExceptionHandler.cpp
.../toolkit/crashreporter/nsExceptionHandler.cpp(739) : error C2065: 'MiniDumpWithFullMemoryInfo' : undeclared identifier
}
I have VC8EEsp1 + 2003R2 SDK.

I found
http://msdn.microsoft.com/en-us/library/ms680519(v=vs.85).aspx
{
MiniDumpWithFullMemoryInfo

    Include memory region information. For more information, see MINIDUMP_MEMORY_INFO_LIST.

        DbgHelp 6.1 and earlier:  This value is not supported.
}
The new code does check for that requirement at runtime,
but I wonder whether there's some build-time (SDK !?) requirement too (that should be checked for)...
blocking2.0: --- → ?
blocking2.0: ? → -
I think maybe we should just bump our base SDK requirement to something that works. It's been long enough, it's not hard to get the Vista SDK or newer.
Wrt this line of code, I would hope this block of code could be in an "#ifdef Vista+Sdk" so 'MiniDumpNormal' type is used by default.

Wrt upping SDK requirement, I would hope this could wait until after Gecko 2.0 branches.
I don't know which of XP_WIN or XP_WIN32 is better, but I don't know either why bug 620974 added a mismatch as XP_WIN32 was already used at the later calling site...

Unless there is an easy way to warn when the condition is not met, I assume the compile-time check can go as unnoticed as the runtime check does anyway.
Assignee: nobody → sgautherie.bz
Status: NEW → ASSIGNED
Attachment #504940 - Flags: review?(benjamin)
Comment on attachment 504940 [details] [diff] [review]
(Av1) Match existing |ifdef XP_WIN32|, Add |#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN|
[Checked in: Comment 7]

I really don't like silently doing this based on the fact that you're using an old SDK, but I'll defer to ted.
Attachment #504940 - Flags: review?(benjamin) → review?(ted.mielczarek)
Comment on attachment 504940 [details] [diff] [review]
(Av1) Match existing |ifdef XP_WIN32|, Add |#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN|
[Checked in: Comment 7]

Doesn't matter, since we silently disable this anyway if your DbgHelp.dll is too old, but I think post-FF4 we're just going to require the Vista or Win7 SDK and get rid of these ifdefs.
Attachment #504940 - Flags: review?(ted.mielczarek) → review+
Comment on attachment 504940 [details] [diff] [review]
(Av1) Match existing |ifdef XP_WIN32|, Add |#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN|
[Checked in: Comment 7]

"approval2.0=?":
Buildtime check to fix compiling on Windows 2000, no risk.
Attachment #504940 - Flags: approval2.0?
Attachment #504940 - Flags: approval2.0? → approval2.0+
Comment on attachment 504940 [details] [diff] [review]
(Av1) Match existing |ifdef XP_WIN32|, Add |#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN|
[Checked in: Comment 7]

http://hg.mozilla.org/mozilla-central/rev/04a3cfea8e20
Attachment #504940 - Attachment description: (Av1) Match existing |ifdef XP_WIN32|, Add |#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN| → (Av1) Match existing |ifdef XP_WIN32|, Add |#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN| [Checked in: Comment 7]
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b11
Target Milestone: mozilla2.0b11 → mozilla2.0b12
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: