Bug 626169 - [Win2k3 SDK] "nsExceptionHandler.cpp(739) : error C2065: 'MiniDumpWithFullMemoryInfo' : undeclared identifier"; (Av1) Match existing |ifdef XP_WIN32|, Add |#if MOZ_WINSDK_TARGETVER >= MOZ_NTDDI_LONGHORN|. r=ted.mielczarek a-2.0=benjamin.